<resources>
    <string name="app_name">Play</string>

    <!-- Start Activity -->
    <string name="join_party">Join\nParty</string>
    <string name="create_party">Create\nParty</string>
    <string name="login">Login with Spotify</string>
    <string name="login_temporary_user">Login as temporary user</string>
    <string name="join_party_button">Join</string>
    <string name="title_activity_party">PartyActivity</string>
    <string name="current_login_email">Currently logged in with - %1$s</string>
    <string name="logout">Logout</string>
    <string name="not_you">Not you?</string>

    <!-- Song Search Activity -->
    <string name="no_songs">no songs</string>
    <string name="not_signed_in">Youre not signed into Spotify\nPlease sign in to view your library</string>
    <string name="add_songs">Add Songs</string>
    <string name="selected_songs">Selected Songs: %1$d</string>

    <!-- Party Members Activity -->
    <string name="members_currently_in_party">Members currently in party</string>


    <!-- Party Activity -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="next">Next</string>
    <string name="title_activity_login">Sign in</string>
    <string name="leave_party_alert">Leaving the party will transfer host privileges to someone else</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="no_song_playing">No song currently playing</string>
    <string name="vote_count">Votes until \n next song:</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
