<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:background="@color/inial_activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miloshzelembaba.play.Activity.StartActivity.InitialActivity">

    <RelativeLayout
        android:id="@+id/user_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/profile_logo"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/logout"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/gray7"
            android:textSize="12dp"
            android:textStyle="bold"
            android:text="@string/not_you"/>

        <TextView
            android:id="@+id/current_user_display_name"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/profile_logo"
            android:layout_toEndOf="@id/profile_logo"
            android:layout_toLeftOf="@id/logout"
            android:layout_toStartOf="@id/logout"
            android:paddingLeft="@dimen/eight_padding"
            android:textColor="@color/black"
            android:textSize="24dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/temporary_user_login"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/user_info_container"
        android:textSize="10dp"
        android:textColor="@color/black"
        android:text="@string/login_temporary_user"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/join_party"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/join_party"
            android:textColor="@color/black"
            android:textSize="24dp"/>

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="300dp"
            android:layout_gravity="center_vertical"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/create_party"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/create_party"
            android:textColor="@color/black"
            android:textSize="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/join_party_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@android:color/darker_gray"
        android:padding="@dimen/sixteen_padding">

        <EditText
            android:id="@+id/party_code"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/login_email_text_size"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/join_party_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/join_party_button"
            android:textSize="@dimen/login_button_text_size"
            android:layout_marginTop="@dimen/sixteen_padding"/>
    </LinearLayout>
</RelativeLayout>
